# gcc-create-library

./: .gitignore  README.md  meson.build  run-dynamic-steps.sh  run-meson-dynamic.sh  run-meson-shared.sh  run-meson-static.sh  run-shared-steps.sh  run-static-steps.sh  run-steps.sh
src/: dlmain.c  main.c  meson.build
src/lib/: answer.c  meson.build
steps/: cleanup  create-dynamic-library-loader  create-object-files  create-shared-library  create-soname-library  create-static-library  install-soname-library  link-dynamically  link-soname-library  link-statically  list-symbols  move-shared-object  run-dinamic-loader  run-dinamic-loader-LD_LIBRARY_PATH  use-shared-library-LD_LIBRARY_PATH
