runtime_sources = ['add.c', 'add.h', 'answer.c', 'answer.h']
runtimelib = static_library('runtime',
                            runtime_sources,
                            install : true)
runtime_shared_lib = shared_library('runtime',
                            runtime_sources,
                            install : true)
